Add logo-image.jpg to images directory, create and begin styling header in index.html and copy header to events.html, gallery.html, join.html, create and begin styling footer in index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <header>
+        <a href="home.html" id="logo-image-link">
+            <img src="assets/images/logo-image.jpg" alt="Top-down view of drone vector image" id="logo-image">
+        </a>
         <h2>West Wales Drone Club</h2>
         <nav>
             <ul>
@@ -28,13 +31,52 @@
             </ul>
         </nav>
     </header>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-4">bla</div>
-            <div class="col-4">bla</div>
-            <div class="col-4">bla</div>
+    <!-- Page spacing -->
+    <div class="container-fluid" id="page-spacing-top"></div>
+    <!-- /Page spacing -->
+    <section>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-4">
+                    <div class="container-fluid">
+                        <img src="https://via.placeholder.com/200x200" alt="Racing drone image" class="drone-images">
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="container-fluid">
+                        <img src="https://via.placeholder.com/200x200" alt="Freestyle drone image" class="drone-images">
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="container-fluid">
+                        <img src="https://via.placeholder.com/200x200" alt="Video drone image" class="drone-images">
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
+    </section>
+    <!-- Page spacing -->
+    <div class="container-fluid" id="page-spacing-bottom"></div>
+    <!-- /Page spacing -->
+    <footer>
+        <ul>
+            <li>
+                <a href="https://www.caa.co.uk/Consumers/Unmanned-aircraft-and-drones/" target="_blank">Civil Aviation Authority</a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank">Facebook</a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank">Twitter</a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank">YouTube</a>
+            </li>
+        </ul>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
