Work on styling page with different device widths in mind, focusing on header

--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
         </nav>
     </header>
     <!-- Page spacing -->
-    <div class="container-fluid" id="page-spacing-top"></div>
+    <div class="container" id="page-spacing-top"></div>
     <!-- /Page spacing -->
     <section>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-4">
+        <div class="container-fluid" id="drone-images-container">
+            <div class="row" id="drone-images">
+                <div class="col-12, col-md-4">
                     <div class="container-fluid">
                         <img src="https://via.placeholder.com/200x200" alt="Racing drone image" class="drone-images">
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12, col-md-4">
                     <div class="container-fluid">
                         <img src="https://via.placeholder.com/200x200" alt="Freestyle drone image" class="drone-images">
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12, col-md-4">
                     <div class="container-fluid">
                         <img src="https://via.placeholder.com/200x200" alt="Video drone image" class="drone-images">
                     </div>
@@ -56,7 +56,15 @@
         </div>
     </section>
     <!-- Page spacing -->
-    <div class="container-fluid" id="page-spacing-bottom"></div>
+    <div class="container" id="page-spacing-middle"></div>
+    <!-- /Page spacing -->
+    <section class="about">
+        <h3>Drones, drones, drones!</h3>
+        <p>Whether you're a nitro-fuelled racer, an acrobatic freestyler, or enjoy the leisured pace of drone cinematography, the West Wales Drone Club is the place for you! Situated in the idyllic countryside of West Wales, we feature race days on our race courses, freestyle events, cinematography competitions, and are a great place to share tips and tricks all things drone. So what are you waiting for?</p>
+    </p>
+    </section>
+    <!-- Page spacing -->
+    <div class="container" id="page-spacing-bottom"></div>
     <!-- /Page spacing -->
     <footer>
         <ul>
