--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>West Wales Drone Club | Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/269586c774.js" crossorigin="anonymous"></script>
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <header>
-        <a href="home.html" id="logo-image-link">
+        <a href="index.html" id="logo-image-link">
             <img src="assets/images/logo-image.jpg" alt="Top-down view of drone vector image" id="logo-image">
         </a>
         <h2>West Wales Drone Club</h2>
@@ -32,24 +33,15 @@
         </nav>
     </header>
     <!-- Page spacing -->
-    <div class="container" id="page-spacing-top"></div>
+    <!-- <div class="container" id="page-spacing-top"></div> -->
     <!-- /Page spacing -->
     <section>
-        <div class="container-fluid" id="drone-images-container">
-            <div class="row" id="drone-images">
-                <div class="col-12, col-md-4">
+        <div class="container-fluid g-0" id="drone-images-container">
+            <div class="row g-0" id="drone-images">
+                <div class="col-12, center-image">
                     <div class="container-fluid">
-                        <img src="https://via.placeholder.com/200x200" alt="Racing drone image" class="drone-images">
-                    </div>
-                </div>
-                <div class="col-12, col-md-4">
-                    <div class="container-fluid">
-                        <img src="https://via.placeholder.com/200x200" alt="Freestyle drone image" class="drone-images">
-                    </div>
-                </div>
-                <div class="col-12, col-md-4">
-                    <div class="container-fluid">
-                        <img src="https://via.placeholder.com/200x200" alt="Video drone image" class="drone-images">
+                        <img src="assets/images/drone-silhouette-3-1.jpg" alt="Drone silhouette image" id="wide-image" class="drone-images">
+                        <img src="assets/images/drone-silhouette-16-9.jpg" alt="Drone silhouette image" id="tall-image" class="drone-images">
                     </div>
                 </div>
             </div>
@@ -59,9 +51,15 @@
     <div class="container" id="page-spacing-middle"></div>
     <!-- /Page spacing -->
     <section class="about">
-        <h3>Drones, drones, drones!</h3>
-        <p>Whether you're a nitro-fuelled racer, an acrobatic freestyler, or enjoy the leisured pace of drone cinematography, the West Wales Drone Club is the place for you! Situated in the idyllic countryside of West Wales, we feature race days on our race courses, freestyle events, cinematography competitions, and are a great place to share tips and tricks all things drone. So what are you waiting for?</p>
-    </p>
+        <h3>Who are we?</h3>
+        <p>We are the West Wales Drone Club! Situated in the idyllic countryside of West Wales, are a group of drone enthusiasts wanting to share our passion with budding operators and ace pilots alike!</p>
+        <h3>What do we do?</h3>
+        <p>Whether you're a nitro-fuelled racer, an acrobatic freestyler, or enjoy the leisured pace of drone cinematography, the West Wales Drone Club is the place for you! Featuring race days and freestyle events acrosss West Wales, as well as monthly cinematography competitions, we have events for drone pilots of all types!</p>
+        <h3>Why should you sign up?</h3>
+        <p>As the foremost drone club in West Wales, we provide a community of like-minded drone enthusiasts for drone pilots in the region. Our weekly events keep your flying skills at peak performance, and our resources, tips, and tricks keep you flying safely and legally! So what are you waiting for?</p>
+        <div class="container-fluid" id="join-button-container">
+            <a href="join.html"><button type="button" class="btn btn-secondary" id="join-button">Join Us!</button></a>
+        </div>
     </section>
     <!-- Page spacing -->
     <div class="container" id="page-spacing-bottom"></div>
@@ -69,19 +67,19 @@
     <footer>
         <ul>
             <li>
-                <a href="https://www.caa.co.uk/Consumers/Unmanned-aircraft-and-drones/" target="_blank">Civil Aviation Authority</a>
+                <a href="https://www.caa.co.uk/Consumers/Unmanned-aircraft-and-drones/" target="_blank"><i class="fas fa-plane"></i><span class="footer-link-text"> CAA</span></a>
             </li>
             <li>
-                <a href="https://www.facebook.com/" target="_blank">Facebook</a>
+                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i><span class="footer-link-text"> Facebook</span></a>
             </li>
             <li>
-                <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i><span class="footer-link-text"> Instagram</span></a>
             </li>
             <li>
-                <a href="https://www.twitter.com/" target="_blank">Twitter</a>
+                <a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter-square"></i><span class="footer-link-text"> Twitter</span></a>
             </li>
             <li>
-                <a href="https://www.youtube.com/" target="_blank">YouTube</a>
+                <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube-square"></i><span class="footer-link-text"> YouTube</span></a>
             </li>
         </ul>
     </footer>
