Add content to events.html and style using bootstrap and custom CSS

--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@
             </ul>
         </nav>
     </header>
-    <!-- Page spacing -->
-    <!-- <div class="container" id="page-spacing-top"></div> -->
-    <!-- /Page spacing -->
     <section>
         <div class="container-fluid g-0" id="drone-images-container">
             <div class="row g-0" id="drone-images">
@@ -58,7 +55,7 @@
         <h3>Why should you sign up?</h3>
         <p>As the foremost drone club in West Wales, we provide a community of like-minded drone enthusiasts for drone pilots in the region. Our weekly events keep your flying skills at peak performance, and our resources, tips, and tricks keep you flying safely and legally! So what are you waiting for?</p>
         <div class="container-fluid" id="join-button-container">
-            <a href="join.html"><button type="button" class="btn btn-secondary" id="join-button">Join Us!</button></a>
+            <a href="join.html"><button type="button" class="btn btn-secondary btn-secondary-bg-color" id="join-button">Join Us!</button></a>
         </div>
     </section>
     <!-- Page spacing -->
