--- a/events.html
+++ b/events.html
@@ -6,21 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>West Wales Drone Club | Events</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/269586c774.js" crossorigin="anonymous"></script>
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <header>
-        <a href="home.html" id="logo-image-link">
+        <a href="index.html" id="logo-image-link">
             <img src="assets/images/logo-image.jpg" alt="Top-down view of drone vector image" id="logo-image">
         </a>
         <h2>West Wales Drone Club</h2>
         <nav>
             <ul>
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="index.html" class="active">Home</a>
                 </li>
                 <li>
-                    <a href="events.html" class="active">Events</a>
+                    <a href="events.html">Events</a>
                 </li>
                 <li>
                     <a href="gallery.html">Gallery</a>
@@ -31,6 +32,163 @@
             </ul>
         </nav>
     </header>
+    <section id="events">
+        <div class="container-fluid">
+            <div class="events-page-title-container">
+                <h3>Winter Events</h3>
+                <h4>(weather permitting!)</h4>
+            </div>
+            <div class="events-background-wrapper">
+                <div class="events-title-container">
+                    <h4>Week One</h4>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <h5>Wednesday 01/12</h5>
+                        <h6>18:00-19:30</h6>
+                        <h6>Carmarthen Indoor Drone Arena</h6>
+                        <p>Race practice night</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h5>Saturday 04/12</h5>
+                        <h6>13:00-14:30</h6>
+                        <h6>Aberystwyth Obstacle Course</h6>
+                        <p>Race day competition at our Aberystwyth obstacle course! Who will fly the fastest?</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h5>Sunday 05/12</h5>
+                        <h6>14:00-16:00</h6>
+                        <h6>Tenby Beach</h6>
+                        <p>Freestyle practice on Tenby Beach</p>
+                    </div>
+                </div>
+            </div>
+            <div class="container page-spacing-events"></div>
+            <div class="events-background-wrapper">
+                <div class="events-title-container">
+                    <h4>Week Two</h4>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <h5>Wednesday 08/12</h5>
+                        <h6>18:00-19:30</h6>
+                        <h6>Carmarthen Indoor Drone Arena</h6>
+                        <p>Freestyle practice night</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h5>Saturday 11/12</h5>
+                        <h6>13:00-14:30</h6>
+                        <h6>Llanelli Estuary</h6>
+                        <p>Freestyle competition on Llanelli Estuary! Show us your most daring stunts!</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h5>Sunday 12/12</h5>
+                        <h6>14:00-16:00</h6>
+                        <h6>Newcastle Emlyn Castle Grounds</h6>
+                        <p>Race practice around the castle ruins</p>
+                    </div>
+                </div>
+            </div>
+            <div class="container page-spacing-events"></div>
+            <div class="events-background-wrapper">
+                <div class="events-title-container">
+                    <h4>Week Three</h4>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <h5>Wednesday 15/12</h5>
+                        <h6>18:00-19:30</h6>
+                        <h6>Carmarthen Indoor Drone Arena</h6>
+                        <p>Race practice night</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h5>Saturday 18/12</h5>
+                        <h6>13:00-14:30</h6>
+                        <h6>Pendine Sands</h6>
+                        <p>Race day competition at the Pendine Sands race course! Who will fly the fastest?</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h5>Sunday 19/12</h5>
+                        <h6>14:00-16:00</h6>
+                        <h6>Pembrey Country Park</h6>
+                        <p>Freestyle practice around Pembrey Country Park</p>
+                    </div>
+                </div>
+            </div>
+            <div class="container page-spacing-events"></div>
+            <div class="events-background-wrapper">
+                <div class="events-title-container">
+                    <h4>Week Four</h4>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <h5>Wednesday 22/12</h5>
+                        <h6>18:00-20:30</h6>
+                        <h6>Carmarthen Indoor Drone Arena</h6>
+                        <p>Christmas Party! Festive themed flying competitions</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h5>Saturday 25/12</h5>
+                        <h6 class="holiday-background">CHRISTMAS DAY</h6>
+                        <h6>No event</h6>
+                        <p>Merry Christmas!</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h5>Sunday 26/12</h5>
+                        <h6 class="holiday-background">BOXING DAY</h6>
+                        <h6>No event</h6>
+                        <p>Merry Christmas!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="container page-spacing-events"></div>
+            <div class="events-background-wrapper">
+                <div class="events-title-container">
+                    <h4>Week Five</h4>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <h5>Wednesday 29/12</h5>
+                        <h6>18:00-19:30</h6>
+                        <h6>Carmarthen Indoor Drone Arena</h6>
+                        <p>Freestyle practice night</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h5>Saturday 01/12</h5>
+                        <h6>13:00-14:30</h6>
+                        <h6>Llanerchaeron Forest</h6>
+                        <p>Freestyle competition in Llanerchaeron Forest! Show us your most daring stunts!</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h5>Sunday 02/12</h5>
+                        <h6>14:00-16:00</h6>
+                        <h6>Carmarthen Showground</h6>
+                        <p>Race practice around our Carmarthen Showground obstacle course</p>
+                    </div>
+                </div>
+            </div>
+            <div class="container page-spacing-events"></div>
+        </div>
+    </section>
+    <footer>
+        <ul>
+            <li>
+                <a href="https://www.caa.co.uk/Consumers/Unmanned-aircraft-and-drones/" target="_blank"><i class="fas fa-plane"></i><span class="footer-link-text"> CAA</span></a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i><span class="footer-link-text"> Facebook</span></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i><span class="footer-link-text"> Instagram</span></a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter-square"></i><span class="footer-link-text"> Twitter</span></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube-square"></i><span class="footer-link-text"> YouTube</span></a>
+            </li>
+        </ul>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
