--- a/join.html
+++ b/join.html
@@ -6,18 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>West Wales Drone Club | Join</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/269586c774.js" crossorigin="anonymous"></script>
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <header>
-        <a href="home.html" id="logo-image-link">
+        <a href="index.html" id="logo-image-link">
             <img src="assets/images/logo-image.jpg" alt="Top-down view of drone vector image" id="logo-image">
         </a>
         <h2>West Wales Drone Club</h2>
         <nav>
             <ul>
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="index.html" class="active">Home</a>
                 </li>
                 <li>
                     <a href="events.html">Events</a>
@@ -26,11 +27,30 @@
                     <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
-                    <a href="join.html" class="active">Join</a>
+                    <a href="join.html">Join</a>
                 </li>
             </ul>
         </nav>
     </header>
+    <footer>
+        <ul>
+            <li>
+                <a href="https://www.caa.co.uk/Consumers/Unmanned-aircraft-and-drones/" target="_blank"><i class="fas fa-plane"></i><span class="footer-link-text"> CAA</span></a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i><span class="footer-link-text"> Facebook</span></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i><span class="footer-link-text"> Instagram</span></a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter-square"></i><span class="footer-link-text"> Twitter</span></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube-square"></i><span class="footer-link-text"> YouTube</span></a>
+            </li>
+        </ul>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
