Upload events-background-image.jpg and set as background of events.html. Style events.html. Fix bug caused by copying-and-pasting modified header from index.html that gave HOME link active class on all pages.

--- a/events.html
+++ b/events.html
@@ -18,10 +18,10 @@
         <nav>
             <ul>
                 <li>
-                    <a href="index.html" class="active">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="events.html">Events</a>
+                    <a href="events.html" class="active">Events</a>
                 </li>
                 <li>
                     <a href="gallery.html">Gallery</a>
@@ -33,141 +33,143 @@
         </nav>
     </header>
     <section id="events">
-        <div class="container-fluid">
+        <div class="container-fluid g-0">
             <div class="events-page-title-container">
                 <h3>Winter Events</h3>
-                <h4>(weather permitting!)</h4>
+                <p>(weather permitting!)</p>
             </div>
-            <div class="events-background-wrapper">
-                <div class="events-title-container">
-                    <h4>Week One</h4>
+            <div class="container-fluid events-background-image-container">
+                <div class="events-background-wrapper">
+                    <div class="events-title-container">
+                        <h4>Week One</h4>
+                    </div>
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <h5>Wednesday 01/12</h5>
+                            <h6>18:00-19:30</h6>
+                            <h6>Carmarthen Indoor Drone Arena</h6>
+                            <p>Race practice night</p>
+                        </div>
+                        <div class="col-md-4">
+                            <h5>Saturday 04/12</h5>
+                            <h6>13:00-14:30</h6>
+                            <h6>Aberystwyth Obstacle Course</h6>
+                            <p>Race day competition at our Aberystwyth obstacle course! Who will fly the fastest?</p>
+                        </div>
+                        <div class="col-md-4">
+                            <h5>Sunday 05/12</h5>
+                            <h6>14:00-16:00</h6>
+                            <h6>Tenby Beach</h6>
+                            <p>Freestyle practice on Tenby Beach</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-4">
-                        <h5>Wednesday 01/12</h5>
-                        <h6>18:00-19:30</h6>
-                        <h6>Carmarthen Indoor Drone Arena</h6>
-                        <p>Race practice night</p>
+                <div class="container page-spacing-events"></div>
+                <div class="events-background-wrapper">
+                    <div class="events-title-container">
+                        <h4>Week Two</h4>
                     </div>
-                    <div class="col-md-4">
-                        <h5>Saturday 04/12</h5>
-                        <h6>13:00-14:30</h6>
-                        <h6>Aberystwyth Obstacle Course</h6>
-                        <p>Race day competition at our Aberystwyth obstacle course! Who will fly the fastest?</p>
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <h5>Wednesday 08/12</h5>
+                            <h6>18:00-19:30</h6>
+                            <h6>Carmarthen Indoor Drone Arena</h6>
+                            <p>Freestyle practice night</p>
+                        </div>
+                        <div class="col-md-4">
+                            <h5>Saturday 11/12</h5>
+                            <h6>13:00-14:30</h6>
+                            <h6>Llanelli Estuary</h6>
+                            <p>Freestyle competition on Llanelli Estuary! Show us your most daring stunts!</p>
+                        </div>
+                        <div class="col-md-4">
+                            <h5>Sunday 12/12</h5>
+                            <h6>14:00-16:00</h6>
+                            <h6>Newcastle Emlyn Castle Grounds</h6>
+                            <p>Race practice around the castle ruins</p>
+                        </div>
                     </div>
-                    <div class="col-md-4">
-                        <h5>Sunday 05/12</h5>
-                        <h6>14:00-16:00</h6>
-                        <h6>Tenby Beach</h6>
-                        <p>Freestyle practice on Tenby Beach</p>
+                </div>
+                <div class="container page-spacing-events"></div>
+                <div class="events-background-wrapper">
+                    <div class="events-title-container">
+                        <h4>Week Three</h4>
+                    </div>
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <h5>Wednesday 15/12</h5>
+                            <h6>18:00-19:30</h6>
+                            <h6>Carmarthen Indoor Drone Arena</h6>
+                            <p>Race practice night</p>
+                        </div>
+                        <div class="col-md-4">
+                            <h5>Saturday 18/12</h5>
+                            <h6>13:00-14:30</h6>
+                            <h6>Pendine Sands</h6>
+                            <p>Race day competition at the Pendine Sands race course! Who will fly the fastest?</p>
+                        </div>
+                        <div class="col-md-4">
+                            <h5>Sunday 19/12</h5>
+                            <h6>14:00-16:00</h6>
+                            <h6>Pembrey Country Park</h6>
+                            <p>Freestyle practice around Pembrey Country Park</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="container page-spacing-events"></div>
+                <div class="events-background-wrapper">
+                    <div class="events-title-container">
+                        <h4>Week Four</h4>
+                    </div>
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <h5>Wednesday 22/12</h5>
+                            <h6>18:00-20:30</h6>
+                            <h6>Carmarthen Indoor Drone Arena</h6>
+                            <p>Christmas Party! Festive themed flying competitions</p>
+                        </div>
+                        <div class="col-md-4">
+                            <h5>Saturday 25/12</h5>
+                            <h6 class="holiday-background">CHRISTMAS DAY</h6>
+                            <h6>No event</h6>
+                            <p>Merry Christmas!</p>
+                        </div>
+                        <div class="col-md-4">
+                            <h5>Sunday 26/12</h5>
+                            <h6 class="holiday-background">BOXING DAY</h6>
+                            <h6>No event</h6>
+                            <p>Merry Christmas!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="container page-spacing-events"></div>
+                <div class="events-background-wrapper">
+                    <div class="events-title-container">
+                        <h4>Week Five</h4>
+                    </div>
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <h5>Wednesday 29/12</h5>
+                            <h6>18:00-19:30</h6>
+                            <h6>Carmarthen Indoor Drone Arena</h6>
+                            <p>Freestyle practice night</p>
+                        </div>
+                        <div class="col-md-4">
+                            <h5>Saturday 01/12</h5>
+                            <h6>13:00-14:30</h6>
+                            <h6>Llanerchaeron Forest</h6>
+                            <p>Freestyle competition in Llanerchaeron Forest! Show us your most daring stunts!</p>
+                        </div>
+                        <div class="col-md-4">
+                            <h5>Sunday 02/12</h5>
+                            <h6>14:00-16:00</h6>
+                            <h6>Carmarthen Showground</h6>
+                            <p>Race practice around our Carmarthen Showground obstacle course</p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="container page-spacing-events"></div>
-            <div class="events-background-wrapper">
-                <div class="events-title-container">
-                    <h4>Week Two</h4>
-                </div>
-                <div class="row">
-                    <div class="col-md-4">
-                        <h5>Wednesday 08/12</h5>
-                        <h6>18:00-19:30</h6>
-                        <h6>Carmarthen Indoor Drone Arena</h6>
-                        <p>Freestyle practice night</p>
-                    </div>
-                    <div class="col-md-4">
-                        <h5>Saturday 11/12</h5>
-                        <h6>13:00-14:30</h6>
-                        <h6>Llanelli Estuary</h6>
-                        <p>Freestyle competition on Llanelli Estuary! Show us your most daring stunts!</p>
-                    </div>
-                    <div class="col-md-4">
-                        <h5>Sunday 12/12</h5>
-                        <h6>14:00-16:00</h6>
-                        <h6>Newcastle Emlyn Castle Grounds</h6>
-                        <p>Race practice around the castle ruins</p>
-                    </div>
-                </div>
-            </div>
-            <div class="container page-spacing-events"></div>
-            <div class="events-background-wrapper">
-                <div class="events-title-container">
-                    <h4>Week Three</h4>
-                </div>
-                <div class="row">
-                    <div class="col-md-4">
-                        <h5>Wednesday 15/12</h5>
-                        <h6>18:00-19:30</h6>
-                        <h6>Carmarthen Indoor Drone Arena</h6>
-                        <p>Race practice night</p>
-                    </div>
-                    <div class="col-md-4">
-                        <h5>Saturday 18/12</h5>
-                        <h6>13:00-14:30</h6>
-                        <h6>Pendine Sands</h6>
-                        <p>Race day competition at the Pendine Sands race course! Who will fly the fastest?</p>
-                    </div>
-                    <div class="col-md-4">
-                        <h5>Sunday 19/12</h5>
-                        <h6>14:00-16:00</h6>
-                        <h6>Pembrey Country Park</h6>
-                        <p>Freestyle practice around Pembrey Country Park</p>
-                    </div>
-                </div>
-            </div>
-            <div class="container page-spacing-events"></div>
-            <div class="events-background-wrapper">
-                <div class="events-title-container">
-                    <h4>Week Four</h4>
-                </div>
-                <div class="row">
-                    <div class="col-md-4">
-                        <h5>Wednesday 22/12</h5>
-                        <h6>18:00-20:30</h6>
-                        <h6>Carmarthen Indoor Drone Arena</h6>
-                        <p>Christmas Party! Festive themed flying competitions</p>
-                    </div>
-                    <div class="col-md-4">
-                        <h5>Saturday 25/12</h5>
-                        <h6 class="holiday-background">CHRISTMAS DAY</h6>
-                        <h6>No event</h6>
-                        <p>Merry Christmas!</p>
-                    </div>
-                    <div class="col-md-4">
-                        <h5>Sunday 26/12</h5>
-                        <h6 class="holiday-background">BOXING DAY</h6>
-                        <h6>No event</h6>
-                        <p>Merry Christmas!</p>
-                    </div>
-                </div>
-            </div>
-            <div class="container page-spacing-events"></div>
-            <div class="events-background-wrapper">
-                <div class="events-title-container">
-                    <h4>Week Five</h4>
-                </div>
-                <div class="row">
-                    <div class="col-md-4">
-                        <h5>Wednesday 29/12</h5>
-                        <h6>18:00-19:30</h6>
-                        <h6>Carmarthen Indoor Drone Arena</h6>
-                        <p>Freestyle practice night</p>
-                    </div>
-                    <div class="col-md-4">
-                        <h5>Saturday 01/12</h5>
-                        <h6>13:00-14:30</h6>
-                        <h6>Llanerchaeron Forest</h6>
-                        <p>Freestyle competition in Llanerchaeron Forest! Show us your most daring stunts!</p>
-                    </div>
-                    <div class="col-md-4">
-                        <h5>Sunday 02/12</h5>
-                        <h6>14:00-16:00</h6>
-                        <h6>Carmarthen Showground</h6>
-                        <p>Race practice around our Carmarthen Showground obstacle course</p>
-                    </div>
-                </div>
-            </div>
-            <div class="container page-spacing-events"></div>
+            <div class="container page-spacing-events-bottom"></div>
         </div>
     </section>
     <footer>
