--- a/join.html
+++ b/join.html
@@ -18,7 +18,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="index.html" class="active">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="events.html">Events</a>
@@ -27,7 +27,7 @@
                     <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
-                    <a href="join.html">Join</a>
+                    <a href="join.html" class="active">Join</a>
                 </li>
             </ul>
         </nav>
