--- a/gallery.html
+++ b/gallery.html
@@ -18,13 +18,13 @@
         <nav>
             <ul>
                 <li>
-                    <a href="index.html" class="active">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="events.html">Events</a>
                 </li>
                 <li>
-                    <a href="gallery.html">Gallery</a>
+                    <a href="gallery.html" class="active">Gallery</a>
                 </li>
                 <li>
                     <a href="join.html">Join</a>
