Add content and style gallery.html, upload gallery images to images directory

--- a/gallery.html
+++ b/gallery.html
@@ -32,6 +32,32 @@
             </ul>
         </nav>
     </header>
+    <section id="gallery">
+        <div class="container-fluid g-0">
+            <div class="row g-0">
+                <div class="col-sm-6 col-md-4 col-lg-3">
+                    <img src="assets/images/gallery-img-1.jpg" alt="">
+                    <img src="assets/images/gallery-img-2.jpg" alt="">
+                    <img src="assets/images/gallery-img-3.jpg" alt="">
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3">
+                    <img src="assets/images/gallery-img-4.jpg" alt="">
+                    <img src="assets/images/gallery-img-5.jpg" alt="">
+                    <img src="assets/images/gallery-img-6.jpg" alt="">
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3">
+                    <img src="assets/images/gallery-img-7.jpg" alt="">
+                    <img src="assets/images/gallery-img-8.jpg" alt="">
+                    <img src="assets/images/gallery-img-9.jpg" alt="">
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3">
+                    <img src="assets/images/gallery-img-10.jpg" alt="">
+                    <img src="assets/images/gallery-img-11.jpg" alt="">
+                    <img src="assets/images/gallery-img-12.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
     <footer>
         <ul>
             <li>
