Add content to join.html and style, modify header to scale better depending on screen size

--- a/events.html
+++ b/events.html
@@ -11,26 +11,34 @@
 </head>
 <body>
     <header>
-        <a href="index.html" id="logo-image-link">
-            <img src="assets/images/logo-image.jpg" alt="Top-down view of drone vector image" id="logo-image">
-        </a>
-        <h2>West Wales Drone Club</h2>
-        <nav>
-            <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="events.html" class="active">Events</a>
-                </li>
-                <li>
-                    <a href="gallery.html">Gallery</a>
-                </li>
-                <li>
-                    <a href="join.html">Join</a>
-                </li>
-            </ul>
-        </nav>
+        <div class="container-fluid g-0">
+            <div class="row g-0">
+                <div class="col-md-12 col-lg-6 header-left">
+                    <a href="index.html" id="logo-image-link">
+                        <img src="assets/images/logo-image.jpg" alt="Top-down view of drone vector image" id="logo-image">
+                    </a>
+                    <h2>West Wales Drone Club</h2>
+                </div>
+                <div class="col-md-12 col-lg-6 header-right">
+                    <nav>
+                        <ul>
+                            <li>
+                                <a href="index.html">Home</a>
+                            </li>
+                            <li>
+                                <a href="events.html"  class="active">Events</a>
+                            </li>
+                            <li>
+                                <a href="gallery.html">Gallery</a>
+                            </li>
+                            <li>
+                                <a href="join.html">Join</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
     </header>
     <section id="events">
         <div class="container-fluid g-0">
