--- a/gallery.html
+++ b/gallery.html
@@ -11,46 +11,54 @@
 </head>
 <body>
     <header>
-        <a href="index.html" id="logo-image-link">
-            <img src="assets/images/logo-image.jpg" alt="Top-down view of drone vector image" id="logo-image">
-        </a>
-        <h2>West Wales Drone Club</h2>
-        <nav>
-            <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="events.html">Events</a>
-                </li>
-                <li>
-                    <a href="gallery.html" class="active">Gallery</a>
-                </li>
-                <li>
-                    <a href="join.html">Join</a>
-                </li>
-            </ul>
-        </nav>
+        <div class="container-fluid g-0">
+            <div class="row g-0">
+                <div class="col-md-12 col-lg-6 header-left">
+                    <a href="index.html" id="logo-image-link">
+                        <img src="assets/images/logo-image.jpg" alt="Top-down view of drone vector image" id="logo-image">
+                    </a>
+                    <h2>West Wales Drone Club</h2>
+                </div>
+                <div class="col-md-12 col-lg-6 header-right">
+                    <nav>
+                        <ul>
+                            <li>
+                                <a href="index.html">Home</a>
+                            </li>
+                            <li>
+                                <a href="events.html">Events</a>
+                            </li>
+                            <li>
+                                <a href="gallery.html" class="active">Gallery</a>
+                            </li>
+                            <li>
+                                <a href="join.html">Join</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
     </header>
     <section id="gallery">
         <div class="container-fluid g-0">
             <div class="row g-0">
-                <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="col-sm-6 col-lg-3">
                     <img src="assets/images/gallery-img-1.jpg" alt="">
                     <img src="assets/images/gallery-img-2.jpg" alt="">
                     <img src="assets/images/gallery-img-3.jpg" alt="">
                 </div>
-                <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="col-sm-6 col-lg-3">
                     <img src="assets/images/gallery-img-4.jpg" alt="">
                     <img src="assets/images/gallery-img-5.jpg" alt="">
                     <img src="assets/images/gallery-img-6.jpg" alt="">
                 </div>
-                <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="col-sm-6 col-lg-3">
                     <img src="assets/images/gallery-img-7.jpg" alt="">
                     <img src="assets/images/gallery-img-8.jpg" alt="">
                     <img src="assets/images/gallery-img-9.jpg" alt="">
                 </div>
-                <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="col-sm-6 col-lg-3">
                     <img src="assets/images/gallery-img-10.jpg" alt="">
                     <img src="assets/images/gallery-img-11.jpg" alt="">
                     <img src="assets/images/gallery-img-12.jpg" alt="">
