--- a/index.html
+++ b/index.html
@@ -56,12 +56,41 @@
     <div class="container" id="page-spacing-middle"></div>
     <!-- /Page spacing -->
     <section class="about">
-        <h3>Who are we?</h3>
-        <p>We are the West Wales Drone Club! Situated in the idyllic countryside of West Wales, are a group of drone enthusiasts wanting to share our passion with budding operators and ace pilots alike!</p>
-        <h3>What do we do?</h3>
-        <p>Whether you're a nitro-fuelled racer, an acrobatic freestyler, or enjoy the leisured pace of drone cinematography, the West Wales Drone Club is the place for you! Featuring race days and freestyle events acrosss West Wales, as well as monthly cinematography competitions, we have events for drone pilots of all types!</p>
-        <h3>Why should you sign up?</h3>
-        <p>As the foremost drone club in West Wales, we provide a community of like-minded drone enthusiasts for drone pilots in the region. Our weekly events keep your flying skills at peak performance, and our resources, tips, and tricks keep you flying safely and legally! So what are you waiting for?</p>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-8 who-txt">
+                    <h3>Who are we?</h3>
+                    <p>We are the West Wales Drone Club! Situated in the idyllic countryside of West Wales, are a group of drone enthusiasts wanting to share our passion with budding operators and ace pilots alike!</p>            
+                </div>
+                <div class="col-lg-4">
+                    <div class="wales-img-container">
+                        <img src="assets/images/wales.jpg" alt="Picture of Welsh coastal cliffs" class="about-img" id="wales-img">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 what-txt order-lg-2">
+                    <h3>What do we do?</h3>
+                    <p>Whether you're a nitro-fuelled racer, an acrobatic freestyler, or enjoy the leisured pace of drone cinematography, the West Wales Drone Club is the place for you! Featuring race days and freestyle events acrosss West Wales, as well as monthly cinematography competitions, we have events for drone pilots of all types!</p>
+                </div>
+                <div class="col-lg-4 order-lg-1">
+                    <div class="wales-img-container">
+                        <img src="assets/images/racing-drone.jpg" alt="Picture of a racing drone in flight" class="about-img" id="wales-img">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 why-txt">
+                    <h3>Why should you sign up?</h3>
+                    <p>As the foremost drone club in West Wales, we provide a community of like-minded drone enthusiasts for drone pilots in the region. Our weekly events keep your flying skills at peak performance, and our resources, tips, and tricks keep you flying safely and legally! So what are you waiting for?</p>
+                </div>
+                <div class="col-lg-4">
+                    <div class="wales-img-container">
+                        <img src="assets/images/handshake.jpg" alt="Picture of a handshake" class="about-img" id="wales-img">
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="container-fluid" id="join-button-container">
             <a href="join.html"><button type="button" class="btn btn-secondary btn-secondary-bg-color" id="join-button">Join Us!</button></a>
         </div>
