Modify spacing of events.html, incorporate title into page design

--- a/events.html
+++ b/events.html
@@ -42,14 +42,17 @@
     </header>
     <section id="events">
         <div class="container-fluid g-0">
-            <div class="events-page-title-container">
-                <h3>Winter Events</h3>
-                <p>(weather permitting!)</p>
-            </div>
             <div class="container-fluid events-background-image-container">
                 <div class="events-background-wrapper">
+                    <div class="events-page-title-container">
+                        <h3>Upcoming Events</h3>
+                        <p>(weather permitting!)</p>
+                    </div>
+                </div>
+                <div class="container page-spacing-events"></div>
+                <div class="events-background-wrapper">
                     <div class="events-title-container">
-                        <h4>Week One</h4>
+                        <h4>Week Beginning 29/11</h4>
                     </div>
                     <div class="row g-0">
                         <div class="col-md-4">
@@ -75,7 +78,7 @@
                 <div class="container page-spacing-events"></div>
                 <div class="events-background-wrapper">
                     <div class="events-title-container">
-                        <h4>Week Two</h4>
+                        <h4>Week Beginning 06/12</h4>
                     </div>
                     <div class="row g-0">
                         <div class="col-md-4">
@@ -101,7 +104,7 @@
                 <div class="container page-spacing-events"></div>
                 <div class="events-background-wrapper">
                     <div class="events-title-container">
-                        <h4>Week Three</h4>
+                        <h4>Week Beginning 13/12</h4>
                     </div>
                     <div class="row g-0">
                         <div class="col-md-4">
@@ -127,7 +130,7 @@
                 <div class="container page-spacing-events"></div>
                 <div class="events-background-wrapper">
                     <div class="events-title-container">
-                        <h4>Week Four</h4>
+                        <h4>Week Beginning 20/12</h4>
                     </div>
                     <div class="row g-0">
                         <div class="col-md-4">
@@ -153,7 +156,7 @@
                 <div class="container page-spacing-events"></div>
                 <div class="events-background-wrapper">
                     <div class="events-title-container">
-                        <h4>Week Five</h4>
+                        <h4>Week Beginning 27/12</h4>
                     </div>
                     <div class="row g-0">
                         <div class="col-md-4">
@@ -177,7 +180,6 @@
                     </div>
                 </div>
             </div>
-            <div class="container page-spacing-events-bottom"></div>
         </div>
     </section>
     <footer>
