--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,9 @@
     <title>West Wales Drone Club | Gallery</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/269586c774.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,700;1,800&display=swap" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -40,7 +43,7 @@
             </div>
         </div>
     </header>
-    <section id="gallery">
+    <div id="gallery">
         <div class="container-fluid g-0">
             <div class="row g-0">
                 <div class="col-sm-6 col-lg-3">
@@ -65,7 +68,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
     <footer>
         <ul>
             <li>
