--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>West Wales Drone Club | Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/269586c774.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,700;1,800&display=swap" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -40,18 +43,16 @@
             </div>
         </div>
     </header>
-    <section>
-        <div class="container-fluid g-0" id="drone-images-container">
-            <div class="row g-0" id="drone-images">
-                <div class="col-12, center-image">
-                    <div class="container-fluid">
-                        <img src="assets/images/drone-silhouette-3-1.jpg" alt="Drone silhouette image" id="wide-image" class="drone-images">
-                        <img src="assets/images/drone-silhouette-16-9.jpg" alt="Drone silhouette image" id="tall-image" class="drone-images">
-                    </div>
+    <div class="container-fluid g-0" id="drone-images-container">
+        <div class="row g-0" id="drone-images">
+            <div class="col-12, center-image">
+                <div class="container-fluid">
+                    <img src="assets/images/drone-silhouette-3-1.jpg" alt="Drone silhouette image" id="wide-image" class="drone-images">
+                    <img src="assets/images/drone-silhouette-16-9.jpg" alt="Drone silhouette image" id="tall-image" class="drone-images">
                 </div>
             </div>
         </div>
-    </section>
+    </div>
     <!-- Page spacing -->
     <div class="container" id="page-spacing-middle"></div>
     <!-- /Page spacing -->
@@ -75,7 +76,7 @@
                 </div>
                 <div class="col-lg-4 order-lg-1">
                     <div class="wales-img-container">
-                        <img src="assets/images/racing-drone.jpg" alt="Picture of a racing drone in flight" class="about-img" id="wales-img">
+                        <img src="assets/images/racing-drone.jpg" alt="Picture of a racing drone in flight" class="about-img" id="racing-drone-img">
                     </div>
                 </div>
             </div>
@@ -86,13 +87,13 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="wales-img-container">
-                        <img src="assets/images/handshake.jpg" alt="Picture of a handshake" class="about-img" id="wales-img">
+                        <img src="assets/images/handshake.jpg" alt="Picture of a handshake" class="about-img" id="handshake-img">
                     </div>
                 </div>
             </div>
         </div>
         <div class="container-fluid" id="join-button-container">
-            <a href="join.html"><button type="button" class="btn btn-secondary btn-secondary-bg-color" id="join-button">Join Us!</button></a>
+            <a href="join.html" class="btn btn-secondary btn-secondary-bg-color" id="join-button">Join Us!</a>
         </div>
     </section>
     <!-- Page spacing -->
