--- a/join.html
+++ b/join.html
@@ -7,6 +7,9 @@
     <title>West Wales Drone Club | Join</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/269586c774.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,700;1,800&display=swap" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -43,42 +46,44 @@
     <section id="join">
         <div class="container-fluid g-0">
             <div class="container-fluid g-0 join-background-image">
-                <div class="page-spacing-join"></div>
-                <h3>Fly with us!</h3>
-                <form action="#" method="POST">
-                    <div class="row g-0">
-                        <div class="col join-left">
-                            <label for="fname">First Name:</label>
+                <div class="container-fluid g-0 join-background-opacity-layer">
+                    <div class="page-spacing-join"></div>
+                    <h3>Fly with us!</h3>
+                    <form action="https://formdump.codeinstitute.net/" method="POST">
+                        <div class="row g-0">
+                            <div class="col join-left">
+                                <label for="fname">First Name:</label>
+                            </div>
+                            <div class="col join-right">
+                                <input type="text" id="fname" name="fname" placeholder="Your first name">
+                            </div>
                         </div>
-                        <div class="col join-right">
-                            <input type="text" id="fname" name="fname" placeholder="Your first name">
+                        <div class="row g-0">
+                            <div class="col join-left">
+                                <label for="lname">Last Name:</label>
+                            </div>
+                            <div class="col join-right">
+                                <input type="text" id="lname" name="lname" placeholder="Your last name">
+                            </div>
                         </div>
-                    </div>
-                    <div class="row g-0">
-                        <div class="col join-left">
-                            <label for="lname">Last Name:</label>
+                        <div class="row g-0">
+                            <div class="col join-left">
+                                <label for="email">Email:</label>
+                            </div>
+                            <div class="col join-right">
+                                <input type="email" id="email" name="email" placeholder="Your email">
+                            </div>
                         </div>
-                        <div class="col join-right">
-                            <input type="text" id="lname" name="lname" placeholder="Your last name">
+                        <div class="page-spacing-join-middle"></div>
+                        <div class="row g-0">
+                            <div class="col">
+                                <button class="btn btn-secondary btn-secondary-bg-color" type="reset"><span class="btn-font">Clear</span></button>
+                                <button class="btn btn-secondary btn-secondary-bg-color btn-font" type="submit" id="submit-button"><span class="btn-font">Sign Up</span></button>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row g-0">
-                        <div class="col join-left">
-                            <label for="email">Email Address:</label>
-                        </div>
-                        <div class="col join-right">
-                            <input type="email" id="email" name="email" placeholder="Your email">
-                        </div>
-                    </div>
-                    <div class="page-spacing-join-middle"></div>
-                    <div class="row g-0">
-                        <div class="col">
-                            <button class="btn btn-secondary btn-secondary-bg-color" type="reset">Clear</button>
-                            <button class="btn btn-secondary btn-secondary-bg-color" type="submit" id="submit-button">Sign Up</button>
-                        </div>
-                    </div>
-                </form>
-                <div class="page-spacing-join-bottom"></div>
+                    </form>
+                    <div class="page-spacing-join-bottom"></div>
+                </div>
             </div>
         </div>
     </section>
