Rename files and relevant filepaths/CSS class tags to ensure consistency across the site

--- a/events.html
+++ b/events.html
@@ -17,8 +17,8 @@
         <div class="container-fluid g-0">
             <div class="row g-0">
                 <div class="col-md-12 col-lg-6 header-left">
-                    <a href="index.html" id="logo-image-link">
-                        <img src="assets/images/logo-image.jpg" alt="Top-down view of drone vector image" id="logo-image">
+                    <a href="index.html" id="logo-img-link">
+                        <img src="assets/images/logo-img.jpg" alt="Top-down view of drone vector image" id="logo-img">
                     </a>
                     <h2>West Wales Drone Club</h2>
                 </div>
@@ -45,7 +45,7 @@
     </header>
     <section id="events">
         <div class="container-fluid g-0">
-            <div class="container-fluid events-background-image-container">
+            <div class="container-fluid events-background-img-container">
                 <div class="events-background-wrapper">
                     <div class="events-page-title-container">
                         <h3>Upcoming Events</h3>
