Start writing README.md from local drafts, start uploading supporting images

--- a/events.html
+++ b/events.html
@@ -182,6 +182,13 @@
                         </div>
                     </div>
                 </div>
+                <div class="container page-spacing-events"></div>
+                <div class="events-background-wrapper">
+                    <div class="events-page-title-container">
+                        <h3>Cinematography Competition!</h3>
+                        <p>Record and edit a video on the theme: Christmas. Winner will be announced during the Christmas party! Get your videos recorded, edited, uploaded, and the link emailed to events@westwalesdroneclub.co.uk before midnight of Sunday 19/12!</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
